XMLHTTPRequest.send should not send Content-Type headers when Blob has no type https://bugs.webkit.org/show_bug.cgi?id=211999

Patch by Rob Buis <rbuis@igalia.com> on 2020-06-08
Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Update improved test expectation.

* web-platform-tests/xhr/send-blob-with-no-mime-type-expected.txt:

Source/WebCore:

XMLHTTPRequest.send should not send Content-Type headers when Blob has no type [1, 2].
This behavior overrides the behavior of the File API spec [3].

Behavior matches Firefox and Chrome.

Test: imported/w3c/web-platform-tests/xhr/send-blob-with-no-mime-type.html

[1] https://xhr.spec.whatwg.org/#dom-xmlhttprequest-send
[2] https://fetch.spec.whatwg.org/#concept-bodyinit-extract
[3] http://dev.w3.org/2006/webapi/FileAPI/#dfn-type

* platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm:
(-[WebCoreResourceHandleAsOperationQueueDelegate connection:willSendRequest:redirectResponse:]):
* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::send):

LayoutTests:

Remove unneeded expectations.

* platform/ios/imported/w3c/web-platform-tests/xhr/send-blob-with-no-mime-type-expected.txt: Removed.
* platform/mac/imported/w3c/web-platform-tests/xhr/send-blob-with-no-mime-type-expected.txt: Removed.

Canonical link: https://commits.webkit.org/225754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262776 268f45cc-cd09-0410-ab3c-d52691b4dbfc